# telegram-emoji-downloader

./: .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: d894f41bfb7c_initial.py
bot/core/: config.py
bot/database/: __init__.py  base.py
bot/database/download/: __init__.py  model.py  repository.py  schemas.py
bot/database/user/: __init__.py  model.py  repository.py  schemas.py
bot/handlers/commands/: start.py
bot/handlers/emoji/: extract.py
bot/handlers/errors/: fallback.py
bot/handlers/packs/: download.py
bot/handlers/stickers/: convert.py
bot/middlewares/: limits.py
bot/services/: archive.py  converter.py
migrations/: env.py
